--- a/styles.css
+++ b/styles.css
@@ -18,16 +18,17 @@ html, body {
   background-size: 100%;
   background-color: hsl(225, 100%, 94%);
   font-family: 'Red Hat Display', sans-serif;
+  line-height: 1.5;
   color: hsl(223, 47%, 23%);
   overflow-y: hidden;
 }
 
 .card {
   background: white;
-  width: 400px;
+  width: 420px;
   margin: 10vh auto;
   border-radius: 20px;
-  box-shadow: 0 0 10px 0 hsl(225, 100%, 94%);
+  box-shadow: 0 0 20px -10px hsl(224, 23%, 55%);
   text-align: center;
 }
 
@@ -35,8 +36,12 @@ html, body {
   padding: 30px;
 }
 
+.cardContent p {
+  color: hsl(224, 23%, 55%);
+}
+
 .headerImage {
-  width: 400px;
+  width: 420px;
   height: 200px;
   background-image: url('./images/illustration-hero.svg');
   background-repeat: round;
@@ -46,12 +51,12 @@ html, body {
 
 .priceTag {
   display: flex;
+  justify-content: space-around;
   width: 320px;
   margin: 20px auto;
   align-items: center;
   border-radius: 10px;
   background: hsl(225, 100%, 98%);
-  color: hsl(223, 47%, 23%);
 }
 
 .priceIcon {
@@ -66,12 +71,15 @@ html, body {
   height: 50px;
   margin-right: 25px;
   text-align: left;
-  color: hsl(223, 47%, 23%);
 }
 
 .priceContent {
   font-weight: bold;
-  hsl(224, 23%, 55%);
+  margin-bottom: 5px;
+}
+
+.price {
+  color: hsl(224, 23%, 55%);
 }
 
 .priceLink {
@@ -80,6 +88,11 @@ html, body {
   font-weight: bold;
   text-decoration: underline;
   color: hsl(245, 75%, 52%);
+}
+
+.priceLink:hover {
+  cursor: pointer;
+  text-decoration: none;
 }
 
 button {
@@ -93,11 +106,11 @@ button {
 .proceed {
   background: hsl(245, 75%, 52%);
   color: white;
+  box-shadow: 0 4px 15px 0 hsl(224, 23%, 55%);
   font-weight: 900;
 }
 
 .proceed:hover {
-  box-shadow: 0 4px 15px 0 hsl(224, 23%, 55%);
   cursor: pointer;
 }
 
@@ -118,12 +131,49 @@ button {
   color: hsl(228, 45%, 44%);
 }
 
-@media screen and (min-width 375px) and (max-width: 667px)  {
+@media only screen and (min-width: 375px) and (max-width: 375px)  {
   .main {
     background: hsl(225, 100%, 94%);
   }
 
   .card {
-    width: 200px;
+    margin: 8vh auto;
+    width: 320px;
+  }
+
+  .headerImage {
+    width: 320px;
+    height: 170px;
+  }
+
+  .cardContent {
+    padding: 10px 30px;
+  }
+
+  .cardContent h1 {
+    font-size: 22px;
+  }
+
+  .priceTag {
+    width: 260px;
+  }
+
+  .priceIcon {
+    margin: 12px;
+  }
+
+  .priceText {
+    margin: 0;
+    padding: 0;
+    font-size: 15px;
+  }
+
+  .priceLink {
+    text-align: right;
+    font-size: 13px;
+  }
+
+  button {
+    width: 260px;
   }
 }
